--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "uuid": "977732e0-0480-4d6e-8b7b-a0e03039738f",
     "template": "https://github.com/strapi/strapi-template-portfolio"
   },
+  "resolutions": {
+    "graphql": "^14.7.0"
+  },
   "engines": {
     "node": ">=10.16.0 <=14.x.x",
     "npm": ">=6.0.0"
